Large number of improvements and fixes
- added note sticking capabilities
- added several key shortcuts to the scratchpad, not all yet
- debouncing now works much better - we're remembering if an activity
  was a 'creation' or not
- scrolling fixed, scrollbar colors fixed

--- a/note-tree/src/styles.css
+++ b/note-tree/src/styles.css
@@ -14,15 +14,15 @@ input {
 
 body {
   /* Foreground, Background */
-  scrollbar-color: var(--bg-color-focus-light) var(--bg-color-focus);
+  scrollbar-color: var(--bg-color-focus) var(--bg-color);
 }
 
 body::-webkit-scrollbar-thumb { /* Foreground */
-  background: var(--bg-color-focus-light);
+  background: var(--bg-color-focus);
 }
 
 body::-webkit-scrollbar-track { /* Background */
-  background: var(--bg-color-focus);
+  background: var(--bg-color);
 }
 
 
